code form update

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
     <h2>This is Bhumika Singh</h2>
     <p>I am New Learner</p>
     <p>I have worked on HTML, CSS, JavaScript</p>
+    <form>
+        <input type="text" placeholder="Enter username" required>  <br>
+        <input type="text" placeholder="Enter field"  required>   <br>
+        <input type="email" placeholder="Enter email"  required>  <br>
+        <input type="password" placeholder="Enter password"  required>
+        <button>Submit</button>
+    </form>
 </body>
 </html>
